Se contempla el evento de que no haya ningun idioma haciendo que se saltee la ventana de seleccion de idioma

--- a/volandoAlto/volandoAlto/src/volandoAlto/interfaz/VentanaTripulacion.form
+++ b/volandoAlto/volandoAlto/src/volandoAlto/interfaz/VentanaTripulacion.form
@@ -898,15 +898,6 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                              <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="btnRegistrarMotivo" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jTextFieldNombreMotivo" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnVolverDesdeRegistrarMOtivoAzafata" min="-2" max="-2" attributes="0"/>
@@ -914,6 +905,16 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jSeparator6" min="-2" pref="320" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                              <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="btnRegistrarMotivo" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jTextFieldNombreMotivo" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jLabel19" alignment="1" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
@@ -939,7 +940,9 @@
                           <Component id="jTextFieldNombreMotivo" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                           <Component id="jLabel17" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jLabel19" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                       <Component id="btnRegistrarMotivo" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace pref="291" max="32767" attributes="0"/>
                   </Group>
@@ -979,6 +982,11 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarMotivoActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel19">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="(Se espera que el motivo est&#xe9; en ingl&#xe9;s)"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
