--- a/volandoAlto/volandoAlto/src/volandoAlto/interfaz/VentanaTripulacion.form
+++ b/volandoAlto/volandoAlto/src/volandoAlto/interfaz/VentanaTripulacion.form
@@ -175,7 +175,7 @@
                           <Component id="btnRegistrarNuevaCiudad" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="btnEliminar" min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="34" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
